Some more navigation, using it as a partial with "include includes/navigation".

--- a/pages/layouts/page.jade
+++ b/pages/layouts/page.jade
@@ -8,9 +8,7 @@ block content
 			h1 Prime
 
 		.nav
-			ul
-				li: a(href=path) Prime
-				li: a(href='#{path}docs.html') Docs
+			include ../includes/navigation
 
 	#container
 
