--- a/pages/tpl/docs.jade
+++ b/pages/tpl/docs.jade
@@ -9,6 +9,9 @@ block content
 
 		h1 Documentation {version}
 
+		.nav
+			include includes/navigation
+
 		.sidebar
 			div
 				include ../docs/toc-{version}.html
