Some more rough layout changes.

--- a/pages/layouts/layout.jade
+++ b/pages/layouts/layout.jade
@@ -1,7 +1,8 @@
 !!!
 html
 	head
-		title My Site
+		block title
+			title Prime
 		link(href="./css/layout.css", rel="stylesheet")
 		block page-head
 	body
