--- a/pages/layouts/page.jade
+++ b/pages/layouts/page.jade
@@ -2,14 +2,8 @@ extends layout
 
 block content
 
-	#header
+	include ../includes/header
 
-		.logo
-			h1 Prime
-
-		.nav
-			include ../includes/navigation
-
-	#container
+	#container.container
 
 		block page-content
