--- a/pages/layouts/layout.jade
+++ b/pages/layouts/layout.jade
@@ -4,6 +4,7 @@ html
 		block title
 			title Prime
 		link(href="./css/layout.css", rel="stylesheet")
+		link(href="./css/monokai.css", rel="stylesheet")
 		block page-head
 	body
 		block content
