--- a/styl/includes/home.styl
+++ b/styl/includes/home.styl
@@ -1,2 +1,15 @@
 
+.about
+	text-align center
 
+	p
+		font-size 0.8em
+
+.download
+	div
+		text-align center
+
+.examples
+	.span6
+		> div
+			padding 0 5px
