--- a/styl/layout.styl
+++ b/styl/layout.styl
@@ -1,8 +1,10 @@
 @import "includes/home"
 @import "includes/docs"
 @import "includes/navigation"
+@import "includes/grid"
+@import "includes/buttons"
 
-width = 1000px
+width = 996px
 
 body
 	background #efefef
