Create an index for all versions of the documentation.

--- a/pages/tpl/docs.jade
+++ b/pages/tpl/docs.jade
@@ -13,4 +13,8 @@ block page-content
 
 		.content
 			div
+				.versions
+					strong Versions:
+					include ../docs/versions
+
 				include ../docs/content-{version}.html
