--- a/styl/layout.styl
+++ b/styl/layout.styl
@@ -27,7 +27,7 @@ body
 	.sidebar
 		width 200px
 
-		div
+		> div
 			padding 1em
 
 			a
@@ -41,7 +41,7 @@ body
 	.content
 		width 800px
 
-		div
+		> div
 			padding 0 30px 30px 30px
 
 #header
